
	Bug Fixes:
	* Gadu-Gadu updates (Andrew Wellington)
	* Compiles again with gcc 2.96 (Ignacio J. Elia)
	* Dialogs opened from a conversation window are now closed when
	  the conversation window is closed, preventing a crash (Kevin Stange)
	* Gtk2.0 compatibility fixes (Tim Ringenbach)
	* Updated and standardized blist signals (Gary Kramlich)
	* More doxygen fixes (Jonathan Champ)

version 0.77 (04/22/2004):
	New Features:
	* The System Log returns (Ka-Hing Cheung)
	* Added a conversation-drag-ended signal (Etan Reisner)
	* Reorganized and cleaned up the MSN protocol plugin (Felipe Contreras)
	* Added the -c option to specify location of the .gaim directory, removed
	  the outdated -f option that no longer had any effect (Daniel Atallah)
	* Novell GroupWise protocol support added (Novell)
	* WYSIWYG improvements (Tim Ringenbach)
	* WYSIWYG editing for user info (Jon Oberheide)
	* Rich-text copy and paste
	* Plugins can now add menu items to the buddy context menu
	  (Christopher O'Brien)
	* Plugins can now add preferences (Gary Kramlich)
	* The TOC protocol is no longer built by default. The plugin is not
	  being properly tested and is no longer officially supported.
	* Bumped up the plugin API version number, and added version numbers
	  for loader plugins and protocol plugins. Authors will want to
	  update their plugins, and possibly use GAIM_PLUGIN_API_VERSION,
	  GAIM_PRPL_API_VERSION, and GAIM_LOADER_API_VERSION constants.
	* Zephyr error reporting works (Arun A. Tharuvai)
	* Zephyr deals with non-utf8 characters (Arun A. Tharuvai)

	Bug Fixes:
	* Formatting in the Log viewer is fixed (Kevin Stange)
	* Save Conversation works again (Kevin Stange)
	* The Clear button in privacy works (Robert Mibus)
	* MSN error reporting works again (Stu Tomlinson)
	* MSN e-mail notifications should no longer cause Gaim to crash
	  (Felipe Contreras)
	* Fixed an infinite loop bug that would sometimes cause MSN to lock
	  up (Nickolai Zeldovich)